packages/webassemblyjs/test/fixtures/type-errors/add/module.wast
(module
	(func (result i32)
		(i64.const 0)
		(i64.const 1)
		(i32.add)
	)
)
